--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     * { box-sizing: border-box; }
 
-    /* Basis-Links: neutral, nicht lila/unterstrichen */
+    /* Links neutral (nicht lila / nicht unterstrichen) */
     a {
       color: inherit;
       text-decoration: none;
@@ -48,27 +48,18 @@
       gap: 20px;
     }
 
-    /* Logo-Bubble */
     .logo-area {
       display: flex;
       align-items: center;
     }
 
-    .logo-bubble {
-      background: #ffffff;
-      border-radius: 999px;
-      padding: 10px 18px;
-      box-shadow: 0 8px 24px rgba(15, 23, 42, 0.18);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .logo-bubble img {
-      height: 120px;   /* Logo grösser */
+    /* Logo direkt auf dem Verlauf, ohne Bubble */
+    .logo-area img {
+      height: 120px;   /* Logo-Grösse anpassbar */
       width: auto;
       object-fit: contain;
       display: block;
+      filter: drop-shadow(0 6px 16px rgba(15, 23, 42, 0.45));
     }
 
     /* Navigation */
@@ -221,7 +212,7 @@
       display: flex;
       justify-content: space-between;
       transform: translateY(-50%);
-      pointer-events: none; /* nur Buttons klickbar */
+      pointer-events: none;
     }
 
     .slider-arrow {
@@ -305,10 +296,8 @@
   <header>
     <div class="header-inner">
       <div class="logo-area">
-        <div class="logo-bubble">
-          <!-- Dateiname muss exakt zu deiner Datei passen -->
-          <img src="logo-mit-claim-verlauf-grün-blau-rgb.jpg" alt="Sylegro Logo mit Claim">
-        </div>
+        <!-- Logo-Datei: wir verwenden den einfachen Namen logo-header.jpg -->
+        <img src="logo-header.jpg" alt="Sylegro Logo mit Claim">
       </div>
 
       <nav>
@@ -325,7 +314,7 @@
   <main>
 
     <section class="grid">
-      <!-- Willkommen-Text ohne H1 -->
+      <!-- Willkommen-Text (ohne H1) -->
       <div class="card">
         <p>
           Sylegro, Ihr zuverlässiger Partner für professionelle Reinigungs- und Hauswartungsdienste.
@@ -425,7 +414,7 @@
       {
         title: "Hauswartung",
         text: "Umfassende Betreuung Ihrer Liegenschaft: Technik, Pflege der Aussenanlagen und Werterhaltung aus einer Hand.",
-        image: "Titelbildmitlogo.jpg"
+        image: "DSC_6486.JPG"
       }
     ];
 
@@ -486,9 +475,8 @@
     setInterval(() => {
       current = (current + 1) % services.length;
       updateSlider(true);
-    }, 6000); // etwas ruhiger
+    }, 6000);
 
-    // Initial anzeigen ohne Fade
     updateSlider(false);
   </script>
 
