--- a/index.html
+++ b/index.html
@@ -95,6 +95,34 @@
       padding: 24px 20px 32px;
     }
 
+    /* Neuer farbiger Hero-Streifen */
+    .hero-intro {
+      background: linear-gradient(135deg,
+        rgba(0, 99, 165, 0.18),
+        rgba(23, 168, 99, 0.18)
+      );
+      border-radius: 20px;
+      padding: 20px 24px;
+      margin-bottom: 22px;
+      box-shadow: 0 10px 28px rgba(15, 23, 42, 0.16);
+      color: #0f172a;
+    }
+
+    .hero-intro h1 {
+      margin: 0 0 8px 0;
+      font-size: 1.7rem;
+      font-weight: 600;
+      color: #ffffff;
+      text-shadow: 0 2px 6px rgba(15, 23, 42, 0.4);
+    }
+
+    .hero-intro p {
+      margin: 0;
+      font-size: 1rem;
+      color: #e5f2ff;
+      max-width: 700px;
+    }
+
     .grid {
       display: grid;
       grid-template-columns: minmax(0, 2fr) minmax(0, 1.5fr);
@@ -114,6 +142,9 @@
       nav {
         justify-content: flex-start;
       }
+      .hero-intro h1 {
+        font-size: 1.4rem;
+      }
     }
 
     .card {
@@ -124,6 +155,11 @@
       box-shadow: 0 8px 24px rgba(15, 23, 42, 0.06);
       border-top: 4px solid var(--sylegro-blue);
       height: 100%;
+    }
+
+    /* linke Karte optisch an Hero anbinden */
+    .card-hero-text {
+      margin-top: -10px;
     }
 
     h1, h2, h3 {
@@ -380,10 +416,19 @@
   <!-- MAIN -->
   <main>
 
+    <!-- NEUER HERO-STREIFEN -->
+    <section class="hero-intro">
+      <h1>Saubere Lösungen. Klare Kommunikation. Verlässlicher Service.</h1>
+      <p>
+        Sylegro kombiniert moderne Reinigung, digitale Transparenz und persönliche Betreuung –
+        für Immobilien, in denen man sich wohlfühlt und gerne arbeitet.
+      </p>
+    </section>
+
     <!-- Grid: Text + Slider -->
     <section class="grid">
       <!-- Willkommen-Text -->
-      <div class="card">
+      <div class="card card-hero-text">
         <p>
           Sylegro, Ihr zuverlässiger Partner für professionelle Reinigungs- und Hauswartungsdienste.
           Unser Name steht für Qualität, Flexibilität und transparente Lösungen, die individuell auf
