--- a/index.html
+++ b/index.html
@@ -2,251 +2,401 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sylegro – Startseite</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- Schrift Kiro -->
+  <link href="https://fonts.googleapis.com/css2?family=Kiro:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
   <style>
-    @font-face {
-      font-family: 'Kiro';
-      src: url('Kiro-Regular.ttf');
-    }
-
     * { box-sizing: border-box; }
 
     :root {
-      --sylegro-green: #17A863;
-      --sylegro-blue: #0063A5;
+      --green: #17A863;
+      --green-soft: #D9F3E6;
+      --green-dark: #0f7a47;
+      --text-main: #0f172a;
+      --bg-light: #f5f7f8;
+
+      /* ERSETZT: --blue-soft */
+      --green-verylight: #E6FAF1;
     }
 
     body {
+      font-family: "Kiro", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Arial, sans-serif;
       margin: 0;
-      background: #f5f5f5;
-      font-family: 'Kiro', sans-serif;
-      color: #1a1a1a;
+      padding: 0;
+      background: var(--bg-light);
+      color: var(--text-main);
     }
+
+    a { color: inherit; text-decoration: none; }
 
     /* HEADER */
     header {
-      background: white;
-      padding: 20px 40px;
-      display: flex;
-      align-items: center;
-      justify-content: flex-start;
-      border-bottom: 3px solid var(--sylegro-green);
+      background: #ffffff;
+      border-bottom: 2px solid var(--green); /* Blau → Grün */
+      padding: 16px 20px;
     }
 
-    header img {
-      height: 120px;
+    .header-inner {
+      max-width: 1100px;
+      margin: 0 auto;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 24px;
+    }
+
+    .logo-area img {
+      height: 190px;
       width: auto;
       object-fit: contain;
+      display: block;
+    }
+
+    nav {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      gap: 18px;
+    }
+
+    nav a {
+      font-size: 0.98rem;
+      font-weight: 500;
+      color: var(--text-main);
+      position: relative;
+      padding-bottom: 4px;
+      opacity: 0.9;
+    }
+
+    nav a::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 0;
+      height: 2px;
+      background: var(--green);
+      border-radius: 999px;
+      transition: width 0.18s ease-out;
+    }
+
+    nav a:hover::after { width: 100%; }
+
+    /* MAIN */
+    main {
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 24px 20px 32px;
+    }
+
+    /* HERO */
+    .hero-intro {
+      background: linear-gradient(135deg, rgba(23, 168, 99, 0.12), rgba(217, 243, 230, 0.9));
+      border-radius: 22px;
+      padding: 20px 24px 22px;
+      margin-bottom: 22px;
+      border: 1px solid rgba(23, 168, 99, 0.25); /* Blau → Grün */
+    }
+
+    .hero-intro h1 {
+      margin: 0 0 8px 0;
+      font-size: 1.6rem;
+      font-weight: 600;
+      color: var(--green-dark);
     }
 
     /* GRID */
     .grid {
-      max-width: 1250px;
-      margin: 50px auto;
       display: grid;
-      grid-template-columns: 1.7fr 1.3fr;
-      gap: 40px;
-      padding: 0 20px;
+      grid-template-columns: minmax(0, 2fr) minmax(0, 1.5fr);
+      gap: 22px;
+      margin-bottom: 24px;
     }
 
     .card {
-      background: white;
+      background: #ffffff;
       border-radius: 18px;
-      padding: 30px;
-      box-shadow: 0 4px 14px rgba(0,0,0,0.08);
-      border-top: 5px solid var(--sylegro-green);
+      padding: 20px 22px 18px;
+      border: 1px solid rgba(23, 168, 99, 0.28); /* Blau → Grün */
+      box-shadow: 0 4px 12px rgba(15, 23, 42, 0.05);
     }
 
-    /* SLIDER LINKS */
-    .slider img {
-      width: 100%;
-      max-height: 420px;
-      border-radius: 16px;
-      object-fit: cover;
-    }
-
-    .slide-btn {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      background: white;
-      border: none;
-      width: 46px;
-      height: 46px;
-      border-radius: 50%;
-      font-size: 24px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-      cursor: pointer;
-      transition: 0.2s;
-    }
-
-    .slide-btn:hover {
-      background: var(--sylegro-green);
-      color: white;
-    }
-
-    .prev-btn { left: 10px; }
-    .next-btn { right: 10px; }
-
-    .slider-wrapper {
+    /* SLIDER */
+    .slider-image-wrapper {
       position: relative;
+      overflow: hidden;
+      border-radius: 14px;
+      margin-bottom: 12px;
     }
 
-    .slider-title {
-      margin: 12px 0 4px;
-      font-size: 1.4rem;
-      font-weight: 600;
+    #service-image {
+      width: 100%;
+      max-height: 280px;
+      object-fit: cover;
+      border-radius: 14px;
+      transition: opacity 0.35s ease;
     }
 
-    .slider-text {
-      color: #444;
-      font-size: 1rem;
-    }
-
-    /* DOTS */
-    .slider-dots {
-      display: flex;
-      gap: 8px;
-      margin-top: 10px;
-    }
+    /* SLIDER DOTS */
     .dot {
-      width: 12px;
-      height: 12px;
-      border-radius: 50%;
-      border: 2px solid var(--sylegro-green);
+      width: 10px;
+      height: 10px;
+      border-radius: 999px;
+      border: 1px solid var(--green);
       cursor: pointer;
     }
+
     .dot.active {
-      background: var(--sylegro-green);
+      background: var(--green);
+      border-color: var(--green);
     }
 
-    /* TEXTBEREICH */
-    .textcard p {
-      font-size: 1.15rem;
-      line-height: 1.7;
-      margin-bottom: 14px;
+    /* QUICK LINKS */
+    .quick-links {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+      gap: 20px;
+      margin-top: 16px;
     }
 
-    .vision-title {
-      font-size: 1.4rem;
-      color: var(--sylegro-green);
-      margin-top: 25px;
-      margin-bottom: 8px;
+    .quick-links .tile {
+      border-radius: 16px;
+      padding: 18px 20px;
+      border: 1px solid rgba(23, 168, 99, 0.25);
+      background: #ffffff;
+      box-shadow: 0 3px 10px rgba(15, 23, 42, 0.04);
     }
 
-    @media (max-width: 900px) {
-      .grid {
-        grid-template-columns: 1fr;
-      }
+    /* Erste Kachel – dominant grün */
+    .quick-links .tile:first-child {
+      background: linear-gradient(135deg, var(--green), #42c887);
+      color: #ffffff;
+      border: none;
+    }
+
+    .quick-links .tile:first-child:hover {
+      background: linear-gradient(135deg, var(--green-dark), #34a067);
+    }
+
+    .quick-links .tile:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 8px 20px rgba(23, 168, 99, 0.25); /* Blau → Grün */
+      border-color: var(--green);
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px 0 26px;
+      font-size: 0.85rem;
+      color: #6b7280;
     }
   </style>
 </head>
+
 <body>
 
-<header>
-  <img src="logo-header.jpg" alt="Sylegro Logo">
-</header>
-
-<main>
-  <section class="grid">
-    
-    <!-- LINKER BEREICH – Slider -->
-    <div class="card slider">
-      <h2 style="margin-top:0;">Unsere Kernleistungen</h2>
-
-      <div class="slider-wrapper">
-        <button class="slide-btn prev-btn">&#10094;</button>
-        <img id="service-image" src="">
-        <button class="slide-btn next-btn">&#10095;</button>
+  <!-- HEADER -->
+  <header>
+    <div class="header-inner">
+      <div class="logo-area">
+        <img src="logo-header.jpg" alt="Sylegro Logo mit Claim">
       </div>
 
-      <div class="slider-title" id="service-title"></div>
-      <div class="slider-text" id="service-text"></div>
-      <div class="slider-dots" id="slider-dots"></div>
+      <nav>
+        <a href="index.html">Startseite</a>
+        <a href="dienstleistungen.html">Dienstleistungen</a>
+        <a href="ueber-uns.html">Über uns</a>
+        <a href="jobs.html">Jobs</a>
+        <a href="kontakt.html">Kontakt</a>
+      </nav>
     </div>
+  </header>
 
-    <!-- RECHTER BEREICH – Text -->
-    <div class="card textcard">
+  <!-- MAIN -->
+  <main>
 
-      <p><strong>Sylegro</strong>, Ihr zuverlässiger Partner für professionelle Reinigungs-
-      und Hauswartungsdienste. Unser Name steht für Qualität, Flexibilität und 
-      transparente Lösungen, die individuell auf Ihre Bedürfnisse zugeschnitten sind.</p>
+    <!-- HERO -->
+    <section class="hero-intro">
+      <h1>Saubere Immobilien. Klare Abläufe. Verlässliche Partnerschaft.</h1>
+      <p>
+        Sylegro verbindet professionelle Reinigung, moderne Hauswartung und transparente Prozesse –
+        für Gebäude, in denen sich Menschen langfristig wohlfühlen.
+      </p>
+    </section>
 
-      <p>Mit klarem Fokus auf Unterhaltsreinigung, Spezialreinigung und Hauswartung 
-      bieten wir Ihnen ein umfassendes Dienstleistungspaket, das höchsten Standards 
-      gerecht wird. Unser erfahrenes Team sorgt dafür, dass Ihre Räumlichkeiten stets 
-      sauber, gepflegt und einladend sind – für ein optimales Arbeits- und Wohnumfeld.</p>
+    <!-- GRID -->
+    <section class="grid">
+      <div class="card card-hero-text">
+        <p>
+          Sylegro, Ihr zuverlässiger Partner für professionelle Reinigungs- und Hauswartungsdienste.
+          Unser Name steht für Qualität, Flexibilität und transparente Lösungen.
+        </p>
+        <p>
+          Mit klarem Fokus auf Unterhaltsreinigung, Spezialreinigung und Hauswartung bieten wir Ihnen
+          ein umfassendes Dienstleistungspaket – sauber, gepflegt und einladend.
+        </p>
+      </div>
 
-      <h3 class="vision-title">Unsere Vision</h3>
+      <!-- SLIDER -->
+      <div class="card slider">
+        <h2>Unsere Kernleistungen</h2>
 
-      <p>Wir gestalten die Zukunft der Gebäudereinigung: digital, nachhaltig und effizient.
-      Mit innovativen Technologien, umweltfreundlichen Reinigungsmethoden und klar 
-      definierten Prozessen setzen wir neue Massstäbe. Unsere digitalen Lösungen sorgen 
-      für maximale Transparenz, während nachhaltige Verfahren den Werterhalt Ihrer 
-      Immobilie sichern.</p>
+        <div class="slider-image-wrapper">
+          <img id="service-image" src="" alt="Dienstleistung">
+          <div class="slider-nav">
+            <button class="slider-arrow" id="prev-slide">&#10094;</button>
+            <button class="slider-arrow" id="next-slide">&#10095;</button>
+          </div>
+        </div>
 
-    </div>
+        <div class="slider-title" id="service-title"></div>
+        <div class="slider-text" id="service-text"></div>
+        <div class="slider-dots" id="slider-dots"></div>
+      </div>
+    </section>
 
-  </section>
-</main>
+    <!-- VISION -->
+    <section class="card card-vision">
+      <h2>Unsere Vision</h2>
+      <p><strong>Wir gestalten die Zukunft der Gebäudereinigung – digital, nachhaltig und effizient.</strong></p>
+      <p>
+        Mit innovativen Technologien, modernen Methoden und klaren Prozessen sorgen wir für Transparenz
+        und nachhaltigen Werterhalt Ihrer Immobilie.
+      </p>
+    </section>
 
-<script>
-  const services = [
-    {
-      title: "Unterhaltsreinigung",
-      text: "Regelmässige Reinigung für Büro, Gewerbe und Private – zuverlässig & flexibel.",
-      image: "Titelbildmitlogo.jpg"
-    },
-    {
-      title: "Spezialreinigung",
-      text: "Tiefenreinigung, Glas- & Fassadenreinigung, Baureinigung und mehr.",
-      image: "AdobeStock_482143067.jpeg"
-    },
-    {
-      title: "Hauswartung",
-      text: "Technik, Pflege der Aussenanlagen und Werterhaltung aus einer Hand.",
-      image: "DSC_6486.JPG"
+    <!-- WAS UNS AUSZEICHNET -->
+    <section class="card excellence-card">
+      <h2>Was uns auszeichnet</h2>
+
+      <div class="excellence-grid">
+
+        <div class="excellence-item">
+          <div class="excellence-icon">Q</div>
+          <div class="excellence-content">
+            <h3>Qualitätsorientiert</h3>
+            <p>Kontinuierlich geprüft, optimiert und zuverlässig.</p>
+          </div>
+        </div>
+
+        <div class="excellence-item">
+          <div class="excellence-icon">E</div>
+          <div class="excellence-content">
+            <h3>Erfahrung & Know-How</h3>
+            <p>Langjährige Expertise, fundierte Methoden.</p>
+          </div>
+        </div>
+
+        <div class="excellence-item">
+          <div class="excellence-icon">F</div>
+          <div class="excellence-content">
+            <h3>Flexibel</h3>
+            <p>Massgeschneiderte Lösungen für individuelle Bedürfnisse.</p>
+          </div>
+        </div>
+
+        <div class="excellence-item">
+          <div class="excellence-icon">T</div>
+          <div class="excellence-content">
+            <h3>Transparent</h3>
+            <p>Klare Kommunikation & nachvollziehbare Abläufe.</p>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <!-- QUICK LINKS — NUR ERSTE 2 GETAUSCHT -->
+    <section class="quick-links">
+
+      <!-- 1. Kachel → ÜBER UNS -->
+      <a href="ueber-uns.html">
+        <div class="tile">
+          <h3>Über uns</h3>
+          <p>Die Menschen und Werte hinter Sylegro.</p>
+        </div>
+      </a>
+
+      <!-- 2. Kachel → UNSERE DIENSTLEISTUNGEN -->
+      <a href="dienstleistungen.html">
+        <div class="tile">
+          <h3>Unsere Dienstleistungen</h3>
+          <p>Unterhaltsreinigung, Spezialreinigung & Hauswartung im Überblick.</p>
+        </div>
+      </a>
+
+      <!-- 3. Jobs -->
+      <a href="jobs.html">
+        <div class="tile">
+          <h3>Jobs</h3>
+          <p>Werde Teil unseres Teams.</p>
+        </div>
+      </a>
+
+      <!-- 4. Kontakt -->
+      <a href="kontakt.html">
+        <div class="tile">
+          <h3>Kontakt</h3>
+          <p>Wir freuen uns auf Ihre Anfrage.</p>
+        </div>
+      </a>
+
+    </section>
+
+  </main>
+
+  <footer>
+    © Sylegro <span id="year"></span>
+  </footer>
+
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+
+    const services = [
+      { title: "Unterhaltsreinigung", text: "Regelmässige Reinigung.", image: "Titelbildmitlogo.jpg" },
+      { title: "Spezialreinigung", text: "Tiefen- & Fassadenreinigung.", image: "AdobeStock_482143067.jpeg" },
+      { title: "Hauswartung", text: "Pflege & Technik aus einer Hand.", image: "DSC_6486.JPG" }
+    ];
+
+    let current = 0;
+    const img = document.getElementById("service-image");
+    const title = document.getElementById("service-title");
+    const text = document.getElementById("service-text");
+    const dots = document.getElementById("slider-dots");
+
+    function renderDots() {
+      dots.innerHTML = "";
+      services.forEach((_, i) => {
+        const d = document.createElement("div");
+        d.className = "dot" + (i === current ? " active" : "");
+        d.onclick = () => { current = i; updateSlider(true); };
+        dots.appendChild(d);
+      });
     }
-  ];
 
-  let current = 0;
+    function updateSlider(fade) {
+      if (fade) img.style.opacity = 0;
 
-  const imgEl = document.getElementById("service-image");
-  const titleEl = document.getElementById("service-title");
-  const textEl = document.getElementById("service-text");
-  const dotsContainer = document.getElementById("slider-dots");
+      setTimeout(() => {
+        const s = services[current];
+        img.src = s.image;
+        title.textContent = s.title;
+        text.textContent = s.text;
+        renderDots();
+        img.style.opacity = 1;
+      }, fade ? 200 : 0);
+    }
 
-  function updateSlider() {
-    imgEl.src = services[current].image;
-    titleEl.textContent = services[current].title;
-    textEl.textContent = services[current].text;
-    renderDots();
-  }
+    document.getElementById("prev-slide").onclick = () => { current = (current - 1 + services.length) % services.length; updateSlider(true); };
+    document.getElementById("next-slide").onclick = () => { current = (current + 1) % services.length; updateSlider(true); };
 
-  function renderDots() {
-    dotsContainer.innerHTML = "";
-    services.forEach((_, i) => {
-      const dot = document.createElement("div");
-      dot.className = "dot" + (i === current ? " active" : "");
-      dot.onclick = () => { current = i; updateSlider(); };
-      dotsContainer.appendChild(dot);
-    });
-  }
+    setInterval(() => { current = (current + 1) % services.length; updateSlider(true); }, 6000);
 
-  document.querySelector(".next-btn").onclick = () => {
-    current = (current + 1) % services.length;
-    updateSlider();
-  };
-
-  document.querySelector(".prev-btn").onclick = () => {
-    current = (current - 1 + services.length) % services.length;
-    updateSlider();
-  };
-
-  updateSlider();
-</script>
+    updateSlider(false);
+  </script>
 
 </body>
 </html>
